feat: rota put para admins
