# src/backend-web/docs/swagger.yaml
@@ -1,5 +1,19 @@
 basePath: /
 definitions:
+  internal_user.AdminUpdateUserRequest:
+    properties:
+      email:
+        type: string
+      is_active:
+        type: boolean
+      name:
+        type: string
+      role:
+        enum:
+        - admin
+        - user
+        type: string
+    type: object
   internal_user.CreateUserRequest:
     properties:
       email:
@@ -43,12 +57,9 @@ definitions:
         type: string
       id:
         type: integer
-      is_active:
-        type: boolean
       name:
         type: string
       role:
-        description: '''admin'' ou ''user'''
         type: string
       updated_at:
         type: string
@@ -67,6 +78,37 @@ info:
   version: "1.0"
 paths:
   /admin/users:
+    get:
+      consumes:
+      - application/json
+      description: Retorna uma lista de todos os usuários ativos no sistema. Requer
+        privilégios de administrador.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/internal_user.User'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "403":
+          description: Forbidden
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Listar todos os usuários
+      tags:
+      - Admin
     post:
       consumes:
       - application/json
@@ -140,6 +182,36 @@ paths:
       summary: Deletar um usuário
       tags:
       - Admin
+    put:
+      consumes:
+      - application/json
+      description: Permite alterar nome, e-mail ou cargo de um usuário via ID.
+      parameters:
+      - description: ID do Usuário
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Campos a atualizar
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/internal_user.AdminUpdateUserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Atualizar qualquer usuário (Admin)
+      tags:
+      - Admin
   /login:
     post:
       consumes:
@@ -167,7 +239,7 @@ paths:
             type: object
       summary: Realizar login
       tags:
-      - Auth
+      - Public
 securityDefinitions:
   BearerAuth:
     description: Digite 'Bearer ' seguido do seu token JWT
